# traccc-aaS

./: .gitignore  .gitmodules  Dockerfile  README.md  setup.sh
backend/: CMakeLists.txt  Dockerfile  README.md
backend/cmake/: TracccBackendConfig.cmake.in
backend/model_repo/Traccc/: config.pbtxt
backend/models/traccc-cpu/: config.pbtxt
backend/models/traccc-gpu/: config.pbtxt
backend/odd_configuration/: odd-digi-geometric-config.json
backend/src/: Traccc.cc
backend/traccc/: CMakeLists.txt  README.md
backend/traccc-cpu/: CMakeLists.txt
backend/traccc-cpu/src/: Traccc.cc
backend/traccc-gpu/: CMakeLists.txt
backend/traccc-gpu/cmake/: FindGTest.cmake
backend/traccc-gpu/src/: traccc.cc
backend/traccc/cmake/: TracccBackendConfig.cmake.in
backend/traccc/models/: config.pbtxt
backend/traccc/src/: traccc.cc
client/: README.md  TracccTritionClient.py  TracccTritonClient.py  TracccTritonPerformanceClient.py  env.yml  event000000000-cells.csv
performance/: README.md  compare_gpu_cpu_traccc.py  generate_json.py  plot_concurrency_studies.py  plot_model_instance_studies.py
performance/submit/: submit_perf_analyzer_jobs.py  submit_traccc_perf.sh
standalone/: CMakeLists.txt  README.md
standalone/cmake/: FindGTest.cmake
standalone/src/: DataStructures.hpp  TracccClusterStandalone.cpp  TracccClusterStandalone.hpp  TracccCpuStandalone.cpp  TracccCpuStandalone.hpp  TracccEdmConversion.hpp  TracccGpuStandalone.cpp  TracccGpuStandalone.hpp
